--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
-  "vendor": "vtex",
-  "name": "minimumtheme",
-  "version": "0.1.1",
+  "vendor": "itgloberspartnercl",
+  "name": "velezPage",
+  "version": "0.0.1",
   "builders": {
+    "assets": "0.x",
     "styles": "2.x",
     "store": "0.x",
     "docs": "0.x"
@@ -44,7 +45,10 @@
     "vtex.iframe": "0.x",
     "vtex.breadcrumb": "1.x",
     "vtex.sticky-layout": "0.x",
-    "vtex.add-to-cart-button": "0.x"
+    "vtex.add-to-cart-button": "0.x",
+    "vtex.store-image": "0.x",
+    "vtex.store-video": "1.x",
+    "vtex.store-newsletter": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
