--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "vendor": "itgloberspartnercl",
-  "name": "velezPage",
+  "name": "velezpage",
   "version": "0.0.1",
   "builders": {
     "assets": "0.x",
