feat(<home>)<--Adding home__video--section--one and Style home-video, added video section one at home and style respective-->

--- a/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
@@ -1,6 +1,9 @@
 {
   "responsive-layout.desktop#home__layout--desktop": {
-    "children": ["rich-text#home__title--test"]
+    "children": [
+      "video#home__video--section--one",
+      "rich-text#home__title--test"
+    ]
   },
   "rich-text#home__title--test": {
     "props": {
