feat(<home>)<--Added image#home____image-section-two which consists of a link image in the section-->

--- a/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
@@ -2,6 +2,7 @@
   "responsive-layout.desktop#home__layout--desktop": {
     "children": [
       "video#home__video--section--one",
+      "image#home__image--section--two",
       "rich-text#home__title--test"
     ]
   },
