--- a/store/blocks/global/screen/header.jsonc
+++ b/store/blocks/global/screen/header.jsonc
@@ -48,8 +48,9 @@
     "props": {
       "title": "Logo",
       "href": "/",
-      "url": "https://brand.vtex.com/static/media/VTEX_pink_RGB.751a9fb5.svg",
-      "width": "80"
+      "url": "assets/image/logo_velez.svg",
+      "width": "80",
+      "blockClass":"header__logo-velez"
     }
   },
   "header-layout.mobile": {
