feat(<home>)<--Adding home-flex-layout-section-three flex layout two rows, female and male categories and their corresponding styles-->

--- a/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
@@ -3,6 +3,7 @@
     "children": [
       "video#home__video--section--one",
       "image#home__image--section--two",
+      "flex-layout.row#home__flex-layout--section--three",
       "rich-text#home__title--test"
     ]
   },
