feat(<home><--Adding image#home__section--five and style corresponding-->)

--- a/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
@@ -5,6 +5,7 @@
       "image#home__image--section--two",
       "flex-layout.row#home__flex-layout--section--three",
       "rich-text#home__rich-text--section--four",
+      "image#home__image--section--five",
       "rich-text#home__title--test"
     ]
   },
