--- a/store/blocks/desktop/components/home-imege.desktop.jsonc
+++ b/store/blocks/desktop/components/home-imege.desktop.jsonc
@@ -4,6 +4,13 @@
       "alt": "image--section--two",
       "src": "assets/image/NAVIDAD-SECTION-1.png",
       "blockClass": "home__image--section--two"
-    } 
+    }
+  },
+  "image#home__image--section--five": {
+    "props": {
+      "alt": "image--section--five",
+      "src": "assets/image/NAVIDAD-SECTION-5.png",
+      "blockClass": "home__image--section--five"
+    }
   }
 }
