feat(<home>)<--Adding titles to blocks, sliding block-designing section six of the page and changing folder structure, changing structures, necessary for the organization, block titles needed for backOffice-->

--- a/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
@@ -6,6 +6,7 @@
       "flex-layout.row#home__flex-layout--section--three",
       "rich-text#home__rich-text--section--four",
       "image#home__image--section--five",
+      "slider-layout#home__slider-layout--section--six",
       "rich-text#home__title--test"
     ]
   },
