--- a/store/blocks/global/components/home/home-video.global.jsonc
+++ b/store/blocks/global/components/home/home-video.global.jsonc
@@ -1,5 +1,6 @@
 {
   "video#home__video--section--one": {
+    "title": "video section one",
     "props": {
       "width": "100%",
       "loop": true,
