--- a/store/blocks/desktop/components/home-imege.desktop.jsonc
+++ b/store/blocks/desktop/components/home-imege.desktop.jsonc
@@ -1,5 +1,6 @@
 {
   "image#home__image--section--two": {
+    "title": "image section two",
     "props": {
       "alt": "image--section--two",
       "src": "assets/image/NAVIDAD-SECTION-1.png",
@@ -7,6 +8,7 @@
     }
   },
   "image#home__image--section--five": {
+    "title": "image section five",
     "props": {
       "alt": "image--section--five",
       "src": "assets/image/NAVIDAD-SECTION-5.png",
