feat((<home>)<--Add section seven composed by list-context. product list and rich-text, each with their respective styles-->)

--- a/store/blocks/global/components/home/home-rich-text.global.jsonc
+++ b/store/blocks/global/components/home/home-rich-text.global.jsonc
@@ -7,5 +7,14 @@
       "textPosition": "CENTER",
       "blockClass": "home__rich-text--section--four"
     }
+  },
+  "rich-text#home__rich-text--section--seven": {
+    "title": "section seven most viewed",
+    "props": {
+      "text": "LOS MÁS VISTOS",
+      "textAlignment": "CENTER",
+      "textPosition": "CENTER",
+      "blockClass": "home__rich-text--section--seven"
+    }
   }
 }
