--- a/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home-responsive-layout.desktop.jsonc
@@ -7,6 +7,8 @@
       "rich-text#home__rich-text--section--four",
       "image#home__image--section--five",
       "slider-layout#home__slider-layout--section--six",
+      "rich-text#home__rich-text--section--seven",
+      "list-context.product-list#home__list-context--section--seven",
       "rich-text#home__title--test"
     ]
   },
