feat(<header>)<--Add a mobile menu composed of login, logo, mini-cart, and drawer-->

--- a/store/blocks/mobile/screen/header/header.mobile.jsonc
+++ b/store/blocks/mobile/screen/header/header.mobile.jsonc
@@ -1,5 +1,5 @@
 {
   "header-layout.mobile": {
-    "children": ["header-row#header__banner--top--mobile"]
+    "children": ["header-row#header__banner--top--mobile","header-row#haeder__menu--mobile"]
   }
 }
