fix(<header>)<--Change properties full-width to true in the banner of the top header-->

--- a/store/blocks/desktop/components/header/header-banner-top.jsonc
+++ b/store/blocks/desktop/components/header/header-banner-top.jsonc
@@ -1,6 +1,6 @@
 {
   "header-row#header__banner--top": {
-    "title": "header__banner--top",
+    "title": "header banner top",
     "children": ["flex-layout.row#banner__top"],
     "props": {
       "sticky": true,
