feat(<home-video-section-one>)<--Add call to action button overlay the video-->

--- a/store/blocks/desktop/screen/home/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home/home-responsive-layout.desktop.jsonc
@@ -1,7 +1,7 @@
 {
   "responsive-layout.desktop#home__layout--desktop": {
     "children": [
-      "video#home__video--section--one",
+      "flex-layout.row#home__video--section--one",
       "image#home__image--section--two",
       "flex-layout.row#home__flex-layout--section--three",
       "rich-text#home__rich-text--section--four",
