--- a/store/blocks/global/components/home/home-video-section-one.jsonc
+++ b/store/blocks/global/components/home/home-video-section-one.jsonc
@@ -1,12 +1,28 @@
 {
-  "video#home__video--section--one": {
+  "flex-layout.row#home__video--section--one": {
     "title": "video section one",
+    "children": [
+      "video#home__video--section--one",
+      "link#home__video--section--one"
+    ],
+    "props": {
+      "blockClass": "home__video--section--one"
+    }
+  },
+  "video#home__video--section--one": {
     "props": {
       "width": "100%",
       "loop": true,
       "autoPlay": true,
       "src": "assets/video/vide-desktop-para-navidad.webm",
       "blockClass": "desktop__video--section--one"
+    }
+  },
+  "link#home__video--section--one": {
+    "props": {
+      "label": "Descubre la nueva colección >>",
+      "displayMode": "button",
+      "blockClass": "home__video--section--one"
     }
   }
 }
