--- a/store/blocks/desktop/screen/header/header.desktop.jsonc
+++ b/store/blocks/desktop/screen/header/header.desktop.jsonc
@@ -6,7 +6,7 @@
     "blocks": ["header-layout.desktop", "header-layout.mobile"]
   },
   "header-layout.desktop": {
-    "children": ["header-row#header__banner--top"]
+    "children": ["header-row#header__banner--top","header-row#header__bottom--desktop"]
   }
 }
  
