--- a/store/blocks/desktop/screen/footer/footer.jsonc
+++ b/store/blocks/desktop/screen/footer/footer.jsonc
@@ -1,26 +1,5 @@
 {
-  "footer": {
-    "blocks": ["footer-layout.desktop", "footer-layout.mobile"]
-  },
-  "footer-layout.desktop": { 
-    "children": [
-      "flex-layout.row#footer"
-    ]
-  },
-  "footer-layout.mobile": { 
-    "children": [
-      "flex-layout.row#footer"
-    ]
-  },
-  "flex-layout.row#footer": { 
-    "children": [
-      "image"
-    ]
-  },
-  "image": {
-    "props": {
-      "width": 100,
-      "src": "assets/image/logo_velez.svg"
-    }
+  "footer-layout.desktop": {
+    "children": ["flex-layout.row#footer-container.desktop"]
   }
 }
