feat(<header>)<--Add a footer to mobile layout with its menus, banner, corresponding styles, and dependency installation disclosure-layout for menu-->

--- a/store/blocks/desktop/components/footer/footer-container.jsonc
+++ b/store/blocks/desktop/components/footer/footer-container.jsonc
@@ -22,7 +22,7 @@
     "props": {
       "width": "auto",
       "rowGap": "2",
-      "blockClass": "foofooter-container__info"
+      "blockClass": "footer-container__info"
     }
   },
   "image#footer__banner--sic": {
