fix(<footer>)<--Added a title to the component of the mobile footer-->

--- a/store/blocks/mobile/components/footer/footer-container.mobile.jsonc
+++ b/store/blocks/mobile/components/footer/footer-container.mobile.jsonc
@@ -1,5 +1,6 @@
 {
   "flex-layout.row#footer-container.mobile": {
+    "title": "footer mobile",
     "children": ["flex-layout.col#footer__menu--subconteiner"]
   },
   "flex-layout.col#footer__menu--subconteiner": {
