REFACTOR(<header>)<--Changes in the structure of the header for the mobile header configuration-->

--- a/store/blocks/mobile/screen/header/header.mobile.jsonc
+++ b/store/blocks/mobile/screen/header/header.mobile.jsonc
@@ -1,5 +1,8 @@
 {
   "header-layout.mobile": {
-    "children": ["header-row#header__banner--top--mobile","header-row#haeder__menu--mobile"]
+    "children": [
+      "header-row#header__banner--top--mobile",
+      "header-row#haeder__menu--mobile"
+    ]
   }
 }
