feat(<header-mobile>)<--adds section header bottom-->

--- a/store/blocks/mobile/screen/header/header.mobile.jsonc
+++ b/store/blocks/mobile/screen/header/header.mobile.jsonc
@@ -2,7 +2,7 @@
   "header-layout.mobile": {
     "children": [
       "header-row#header__banner--top--mobile",
-      "header-row#haeder__menu--mobile"
+      "header-row#mobile__haeder-bottom"
     ]
   }
 }
