REFACTOR(<icon cart and structure menu>)<--Change in the icon cart and change in the basic menu structure-->

--- a/store/blocks/desktop/components/header/minicart/header-bottom-minicart.jsonc
+++ b/store/blocks/desktop/components/header/minicart/header-bottom-minicart.jsonc
@@ -4,13 +4,12 @@
     "props": {
       "variation": "popup",
       "openOnHover": true,
-      "MinicartIcon": "icon#header__icon--minicat",
+      "MinicartIcon": "icon-cart#header__icon--minicat",
       "blockClass": "header__bottom--minicat"
     }
   },
-  "icon#header__icon--minicat": {
+  "icon-cart#header__icon--minicat": {
     "props": {
-      "id": "icon-minicart",
       "size": 20,
       "viewBox": "0 0 20 20"
     }
