REFACTOR(<home deleted section>)<--Deleted video of section one of home-->

--- a/store/blocks/global/components/home/home-video-section-one.jsonc
+++ b/store/blocks/global/components/home/home-video-section-one.jsonc
@@ -14,7 +14,7 @@
       "width": "100%",
       "loop": true,
       "autoPlay": true,
-      "src": "assets/video/vide-desktop-para-navidad.webm",
+      "src": "#",
       "blockClass": "desktop__video--section--one"
     }
   },
