--- a/manifest.json
+++ b/manifest.json
@@ -55,7 +55,9 @@
     "vtex.product-list": "0.x",
     "vtex.checkout-summary": "0.x",
     "vtex.disclosure-layout": "1.x",
-    "vtex.product-price": "1.x"
+    "vtex.product-price": "1.x",
+    "vtex.modal-layout": "0.x",
+    "vtex.product-specifications": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
