--- a/store/blocks/desktop/components/header/header-bottom-search.jsonc
+++ b/store/blocks/desktop/components/header/header-bottom-search.jsonc
@@ -3,16 +3,21 @@
     "title": "menu search desktop",
     "blocks": ["autocomplete-result-list.v2"],
     "props": {
+      "attemptPageTypeSearch": true,
       "openAutocompleteOnFocus": true,
       "placeholder": "¿Que buscas?",
-      "containerMode": "container",
-      "autocompleteFullWidth": true,
+      "autocompleteFullWidth": false,
+      "autocompleteAlignment": "left",
       "blockClass": "header__bottom--search"
     }
   },
   "autocomplete-result-list.v2": {
     "blocks": ["product-summary.shelf#search__menu--header"],
     "props": {
+      "autocompleteWidth": 40,
+      "maxTopSearches": 5,
+      "maxHistory": 2,
+      "productLayout": "vertical",
       "blockClass": "header__bottom--search"
     }
   },
@@ -27,14 +32,14 @@
   },
   "product-summary-name#product__search": {
     "props": {
-       "tag": "h2",
-       "blockClass": "header__product--search"
+      "tag": "h2",
+      "blockClass": "header__product--search"
     }
   },
   "product-summary-image#product__search": {
     "props": {
       "aspectRatio": {
-        "desktop": "4:1"
+        "desktop": "3:1"
       }
     }
   }
